# Ecokey_Firmware

./: .gitignore  CMakeLists.txt  Readme.md  ble_scanner.c  ble_scanner.h  ejemplos.md  partitions.csv  sdkconfig  sdkconfig.old  tu_archivo.c
certs/: ca.pem
components/app_control/: CMakeLists.txt  app_control.c
components/app_inicializacion/: CMakeLists.txt  app_inicializacion.c
components/app_inicializacion/include/: app_inicializacion.h
components/ble_scanner/: CMakeLists.txt  ble_scanner.c
components/button/: CMakeLists.txt  button.c
components/control_button/: CMakeLists.txt  control_button.c
components/estado_automatico/: CMakeLists.txt  estado_automatico.c
components/estado_configuracion/: CMakeLists.txt  estado_configuracion.c
components/estado_inicio/: CMakeLists.txt  estado_inicio.c
components/estado_manual/: CMakeLists.txt  estado_manual.c
components/led/: CMakeLists.txt  led.c
components/mqtt_client/: CMakeLists.txt  mqtt_client.c
components/mqtt_service/: CMakeLists.txt  Kconfig  README.md  mqtt_service.c  mqtt_service.h
components/nvs_manager/: CMakeLists.txt  nvs_manager.c
components/ota_service/: CMakeLists.txt  ota_service.c
components/relay_controller/: CMakeLists.txt  relay_controller.c
components/resource_manager/: CMakeLists.txt  resource_manager.c
components/temp_sensor/: CMakeLists.txt  Kconfig
components/time_manager/: CMakeLists.txt  Kconfig  README.md  time_manager.c
components/wifi_ap/: CMakeLists.txt  wifi_ap.c
components/wifi_sta/: CMakeLists.txt  (+2 more)
examples/: README.md
main/: CMakeLists.txt  main.c
(+45 files in other folders)
